# Chronicle

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Examples/: CMakeLists.txt  demo.cpp
benchmarks/: AsyncBenchmarker.cpp  AsyncBenchmarker.h  AsyncBenchmarker.hpp
cmake/: ChronicleConfig.cmake.in
include/: AsyncLogger.h  RingBuffer.h
include/Allocator/: Allocator.hpp
include/AsyncLogger/: AsyncLogger.h  AsyncLogger.hpp  LogLevel.h  LogLevel.hpp  LogMessage.h  LogMessage.hpp
include/RingBuffer/: RingBuffer.h  RingBuffer.hpp
src/: AsyncLogger.cpp  LogLevel.cpp  RingBuffer.tpp  main.cpp
src/Allocator/: Allocator.cpp
src/AsyncLogger/: AsyncLogger.cpp  LogLevel.cpp  LogMessage.cpp
src/RingBuffer/: RingBuffer.tpp
